--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,23 +1,39 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0D1117 ;
+  --foreground: #ededed;
+
+  --color-primary: #0D1117; /* deep near-black (GitHub dark mode) */
+  --color-secondary: #161B22; /* slightly lighter for sections/cards */
+  
+  --color-text-primary: #F0F6FC; /* off-white, easy on the eyes */
+  --color-text-secondary: #8B949E; /* muted gray for less important info */
+  
+  --color-border: #30363D; /* subtle gray border */
+  --color-hover-bg: #21262D; /* lighter gray for hover effects */
+  
+  --color-error: #F85149; /* vibrant red for alerts */
+  
+  --color-accent-primary: #A371F7; /* vibrant purple highlight */
+  --color-accent-secondary: #BB86FC; /* lighter purple for hover/subtle highlights */
+
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-display: var(--font-space-grotesk)
+  --font-sans: var(--font-inter);
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
